🎨 style: fixing overflow

--- a/app/styles/components/_movie_credits.scss
+++ b/app/styles/components/_movie_credits.scss
@@ -40,7 +40,7 @@
 .details__cast {
   display: flex;
   flex-direction: row;
-  overflow-y: auto;
+  overflow-x: auto;
   gap: 1.5rem;
   width: 100%;
 
