--- a/app/styles/components/_movie_lists.scss
+++ b/app/styles/components/_movie_lists.scss
@@ -43,7 +43,7 @@
 .list {
   display: flex;
   flex-direction: row;
-  overflow-y: auto;
+  overflow-x: auto;
   gap: 2rem;
   width: 100%;
   padding: 0 20px;
