--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -5,7 +5,7 @@
   ul {
     display: flex;
     flex-direction: row;
-    overflow-y: auto;
+    overflow-x: auto;
     gap: 1.75rem;
     width: 100%;
   }
